--- a/src/app/ui/home.module.scss
+++ b/src/app/ui/home.module.scss
@@ -1,11 +1,11 @@
 .semidonut{
     --percentage: 0;
-    --fill: #ff0;
-    width: 300px;
-    height: 150px;
+    --fill: rgb(210, 224, 9);
+    width: 200px;
+    height: 100px;
     position: relative;
     color: #fff;
-    font-size: 22px;
+    font-size: 32px;
     font-weight: 600;
     overflow: hidden;
     color: var(--fill);
@@ -15,9 +15,9 @@
     box-sizing : border-box;
     &:after{
         content: '';
-        width: 300px;
-        height: 300px;
-        border:50px solid;
+        width: 200px;
+        height: 200px;
+        border:25px solid;
         border-color : rgba(0,0,0,0.15) rgba(0,0,0,0.15) var(--fill) var(--fill);
         position: absolute;
         border-radius: 50%;
