доработана карточка с давлением и УФ индексом

--- a/src/app/ui/home.module.scss
+++ b/src/app/ui/home.module.scss
@@ -1,6 +1,6 @@
 .semidonut{
     --percentage: 0;
-    --fill: rgb(210, 224, 9);
+    --fill: #00FF00;
     width: 200px;
     height: 100px;
     position: relative;
